[workspace]
members = [
	"./",
	"batch-codegen",
	"batch-core",
	"batch-rabbitmq",
	"batch-rabbitmq-codegen",
	"batch-worker",
	"examples/rabbitmq-simple",
	"examples/rabbitmq-warp",
]

[package]
name = "batch"
description = "Safe & extensible background job library supporting RabbitMQ"
homepage = "https://kureuil.github.io/batch-rs/"
repository = "https://github.com/kureuil/batch-rs"
version = "0.2.0" # remember to update html_root_url
license = "MIT/Apache-2.0"
authors = ["Louis Person <louis@person.guru>"]
readme = "README.md"
keywords = ["task", "queue", "job", "distributed", "background"]
categories = ["asynchronous"]

[badges]
travis-ci = { repository = "kureuil/batch-rs" }
appveyor = { repository = "kureuil/batch-rs", id = "p8390hfhs1ndmrv9" }

[dependencies]
batch-codegen = { version = "0.2", path = "./batch-codegen", optional = true }
batch-core = { version = "0.2", path = "./batch-core" }
batch-rabbitmq = { version = "0.2", path = "./batch-rabbitmq", optional = true }
batch-rabbitmq-codegen = { version = "0.2", path = "./batch-rabbitmq-codegen", optional = true }
batch-worker = { version = "0.2", path = "./batch-worker", optional = true }
failure = "0.1"
futures = "0.1.20"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.1", optional = true }

[features]
default = ["codegen"]
codegen = ["batch-codegen"]
rabbitmq = ["batch-rabbitmq", "batch-rabbitmq-codegen"]
runtime = ["tokio"]
worker = ["batch-worker"]
