[workspace]
members = [
	"./",
	"batch-codegen",
	"batch-rabbitmq",
	"batch-rabbitmq-codegen",
	"examples/rabbitmq-simple",
	"examples/rabbitmq-warp",
]

[package]
name = "batch"
description = "Safe & extensible background job library supporting RabbitMQ"
homepage = "https://kureuil.github.io/batch-rs/"
repository = "https://github.com/kureuil/batch-rs"
version = "0.2.0" # remember to update html_root_url
license = "MIT/Apache-2.0"
authors = ["Louis Person <louis@person.guru>"]
readme = "README.md"
keywords = ["task", "queue", "job", "distributed", "background"]
categories = ["asynchronous"]

[badges]
travis-ci = { repository = "kureuil/batch-rs" }
appveyor = { repository = "kureuil/batch-rs", id = "p8390hfhs1ndmrv9" }

[dependencies]
batch-codegen = { version = "0.2", path = "./batch-codegen", optional = true }
failure = "0.1"
futures = "0.1.20"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.1", optional = true }
tokio-executor = "0.1"
uuid = { version = "0.6", features = ["v4", "serde"] }
wait-timeout = "0.1.5"

[features]
default = ["codegen"]
codegen = ["batch-codegen"]
runtime = ["tokio"]
