[package]
name = "batch-codegen"
description = "Batch's procedural macros"
repository = "https://github.com/kureuil/batch-rs"
version = "0.2.0" # remember to update html_root_url
license = "MIT/Apache-2.0"
authors = ["Louis Person <louis@person.guru>"]

[lib]
proc-macro = true

[dependencies]
humantime = "1.1.1"
proc-macro2 = "0.4"
quote = "0.6"
syn = { version = "0.15", features = ["full", "visit-mut"] }
