[package]
name = "batch-core"
description = "Core traits and types for the `batch` library"
repository = "https://github.com/kureuil/batch-rs"
version = "0.2.0" # remember to update html_root_url
license = "MIT/Apache-2.0"
authors = ["Louis Person <louis@person.guru>"]

[dependencies]
failure = "0.1.1"
futures = "0.1.17"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
state = { version = "0.4.1", features = ["tls"] }
uuid = { version = "0.6", features = ["v4", "serde"] }

[dev-dependencies]
batch = { version = "0.2", path = "../" }
