[package]
edition = "2018"
name = "batch-test"
description = "Testing utilities for Batch adapters"
repository = "https://github.com/kureuil/batch-rs"
version = "0.2.0" # remember to update html_root_url
license = "MIT/Apache-2.0"
authors = ["Louis Person <louis@person.guru>"]

[dependencies]
batch = { version = "0.2", path = "../" }
serde = "1.0"
