[package]
name = "batch"
description = "Distributed task queue library based on RabbitMQ"
homepage = "https://kureuil.github.io/batch-rs/"
repository = "https://github.com/kureuil/batch-rs"
version = "0.1.1" # remember to update html_root_url
license = "MIT/Apache-2.0"
authors = ["Louis Person <louis@person.guru>"]
readme = "README.md"
keywords = ["task queue", "rabbitmq", "amqp", "asynchronous"]
categories = ["asynchronous"]

[badges]
travis-ci = { repository = "kureuil/batch-rs" }

[dependencies]
failure = "0.1.1"
futures = "0.1.17"
lapin-async = "0.10"
lapin-futures = "0.10"
lapin-futures-rustls = "0.10"
lapin-futures-tls-api = "0.6"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio-core = "0.1"
uuid = { version = "0.6", features = ["v4", "serde"] }
wait-timeout = "0.1.5"

batch-codegen = { version = "0.1", path = "../batch-codegen", optional = true }

[dev-dependencies]
env_logger = "0.5"

[features]
default = ["codegen"]
codegen = ["batch-codegen"]
