[package]
name = "batch"
description = "Distributed task queue library based on RabbitMQ"
homepage = "https://kureuil.github.io/batch-rs/"
repository = "https://github.com/kureuil/batch-rs"
version = "0.1.1" # remember to update html_root_url
license = "MIT/Apache-2.0"
authors = ["Louis Person <louis@person.guru>"]
readme = "README.md"
keywords = ["task queue", "rabbitmq", "amqp", "asynchronous"]
categories = ["asynchronous"]

[badges]
travis-ci = { repository = "kureuil/batch-rs" }
appveyor = { repository = "kureuil/batch-rs", id = "p8390hfhs1ndmrv9" }

[dependencies]
amq-protocol = "0.19"
bytes = "0.4"
failure = "0.1.1"
futures = "0.1.17"
lapin-futures = "0.12"
log = "0.4"
native-tls = "0.1"
num_cpus = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-executor = "0.1"
tokio-io = "0.1"
tokio-reactor = "0.1"
tokio-tcp = "0.1"
tokio-tls = "0.1"
uuid = { version = "0.6", features = ["v4", "serde"] }
wait-timeout = "0.1.5"

batch-codegen = { version = "0.1", path = "../batch-codegen", optional = true }

[dev-dependencies]
env_logger = "0.5"
lazy_static = "1.0"
tokio = "0.1"

[features]
default = ["codegen"]
codegen = ["batch-codegen"]
