[package]
edition = "2018"
name = "batch-example-rabbitmq-standalone"
version = "0.2.0"
authors = ["Louis Person <louis@person.guru>"]
publish = false

[[bin]]
name = "client"
doc = false

[[bin]]
name = "worker"
doc = false

[dependencies]
batch = { version = "0.2", path = "../../" }
batch-rabbitmq = { version = "0.2", path = "../../batch-rabbitmq" }
env_logger = "0.5"
failure = "0.1"
futures = "0.1"
tokio = "0.1"
serde = "1"
