[package]
name = "batch-example-warp"
version = "0.2.0"
authors = ["Louis Person <louis@person.guru>"]
publish = false

[[bin]]
name = "server"
doc = false

[[bin]]
name = "worker"
doc = false

[dependencies]
batch = { path = "../../", version = "0.2" }
env_logger = "0.5"
failure = "0.1"
futures = "0.1"
serde = { version = "1.0", features = ["derive"] }
tokio = "0.1"
warp = "0.1.2"
